load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# Gazelle manages BUILD files for Go; run with:
#   bazel run //:gazelle
gazelle(
    name = "gazelle",
    args = [
        "-go_prefix=github.com/alexfalkowski/gocovmerge/v2",
        "-build_file_name=BUILD.bazel",
    ],
    command = "fix",
)

# Optional: keep repository macros in sync (MODULE.bazel via bzlmod).
gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-build_file_name=BUILD.bazel",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "gocovmerge_lib",
    srcs = ["main.go"],
    importpath = "github.com/alexfalkowski/gocovmerge/v2",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/cmd",
        "//internal/flag",
        "//internal/io",
        "//internal/log",
    ],
)

go_binary(
    name = "gocovmerge",
    embed = [":gocovmerge_lib"],
    visibility = ["//visibility:public"],
)
