load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "gocovmerge",
    embed = [":gocovmerge_lib"],
    importpath = "github.com/alexfalkowski/gocovmerge/v2",
    visibility = ["//visibility:public"],
)

gazelle(name = "gazelle")

go_library(
    name = "gocovmerge_lib",
    srcs = ["main.go"],
    importpath = "github.com/alexfalkowski/gocovmerge/v2",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/cmd",
        "//internal/flag",
        "//internal/io",
        "//internal/log",
    ],
)
