module(
    name = "gocovmerge",
    version = "0.0.0",
    compatibility_level = 1,
)

# Bazel is pinned via `.bazelversion` (for Bazelisk). Do NOT add a `bazel_dep`
# for Bazel itself: there is no `bazel@<version>` module in the Bazel Central
# Registry, and doing so breaks dependency resolution.

# Core rules.
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Bazel 9 removes some built-in rules (including sh_*). Some upstream
# dependencies (notably rules_go) still define targets of type sh_test.
# Pulling in rules_shell provides sh_test/sh_binary/sh_library.
bazel_dep(name = "rules_shell", version = "0.6.1")

# Ensure Bazel uses the same Go version as `go.mod` (go 1.26.0) by having
# rules_go download and register the matching toolchain.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "org_golang_x_tools")
